# qr-server

./: .gitignore  Dockerfile  README.md  devbox.json  pyproject.toml  server.py
