[tool.poetry]
name = "ocr-server"
version = "0.1.0"
description = ""
authors = ["Ben Packer <ben.paul.ryan.packer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pillow = "^10.3.0"
qrcode = "^7.4.2"
uvicorn = "^0.29.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
